--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -10,7 +10,7 @@
     <h1><%= link_to this_blog.blog_name, this_blog.base_url %></h1>
     <p class="desc"><%= this_blog.blog_subtitle %></p>
   </div>
-
+  suppppp brah?
   <div id="page">
     <div id="content">
       <%= yield %>
