--- a/themes/bootstrap-2/views/layouts/default.html.erb
+++ b/themes/bootstrap-2/views/layouts/default.html.erb
@@ -2,36 +2,17 @@
 <html lang="en">
 <head profile="http://gmpg.org/xfn/11">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= h(page_title) %></title>
+  <title>Burak Icel</title>
   <%= stylesheet_link_tag "/stylesheets/theme/bootstrap.css", "/stylesheets/theme/style.css", "/stylesheets/user-style.css", :media => 'all' %>
   <%= render 'shared/page_header' %>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <div class='navbar-header'>
-        <%= link_to(content_tag(:span, '', class: 'glyphicon glyphicon-th'), this_blog.base_url, class: 'navbar-brand' )%>
-      </div>
-      <ul class='nav navbar-nav pull-right'>
-        <li><%= link_to(t('.statuses'), {controller: 'notes'}) %></li>
-        <li><%= link_to(t('.archives'), {controller: 'articles', action: 'archives'}) %></li>
-        <%- Page.published.each do |page| %>
-        <li><%= link_to_permalink(page, page.title) %></li>
-        <%- end %>
-      </ul>
-    </div>
-  </nav>
 
-  <div id='logo' class='container'>
-    <div class='row'>
-      <div class='col-lg-12 vertical-container'>
-        <div class='vertical'>
-          <h1><%= link_to(this_blog.blog_name, this_blog.base_url) %></h1>
-          <p class='subtitle'><%= this_blog.blog_subtitle %></p>
-        </div>
-      </div>
-    </div>
-  </div>
+
+  <div class="sitename col-sm-12"> <h1><%= link_to("Burak Icel of Hobbiton", this_blog.base_url) %></h1> </div>
+
+  <!-- 
   <div class='container' id='page'>
     <div class='col-sm-8'>
       <%= yield %>
@@ -47,6 +28,7 @@
       <div class='span7'></div>
     </div>
   </div>
-  <p style='text-align: center'><small>Powered by <a href='http://publify.co'>Publify</a> | Photo <a href='http://startupstockphotos.com/'>Startup stock photos</a></small></p>
+  <p style='text-align: center'><small>Powered by <a href='http://publify.co'>Publify</a> | Photo <a href='http://startupstockphotos.com/'>Startup stock photos</a></small></p> -->
+
 </body>
 </html>
