--- a/themes/bootstrap-2/views/articles/view_page.html.erb
+++ b/themes/bootstrap-2/views/articles/view_page.html.erb
@@ -1,2 +1,2 @@
-<h1 class='page-header'><%= link_to_permalink(@page, @page.title) %></h1>
+<h1 class='page-header'><%= link_to_permalink(@page, @page.title.html_safe) %></h1>
 <%= @page.html %>
