--- a/themes/bootstrap-2/views/layouts/default.html.erb
+++ b/themes/bootstrap-2/views/layouts/default.html.erb
@@ -8,27 +8,72 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-
-  <div class="sitename col-sm-12"> <h1><%= link_to("Burak Icel of Hobbiton", this_blog.base_url) %></h1> </div>
-
-  <!-- 
-  <div class='container' id='page'>
-    <div class='col-sm-8'>
+  <div id="sky"></div>
+  <div id="sun"></div>
+  <div class="ground"></div>
+  <div class="erebor col-sm-12">
+    <div id="clouds">
+  <div class="cloud x1"></div>
+  <!-- Time for multiple clouds to dance around -->
+  <div class="cloud x2"></div>
+  <div class="cloud x3"></div>
+  <div class="cloud x4"></div>
+  <div class="cloud x5"></div>
+</div>
+    <div class="kaushan">In a hole in the ground there lived a hobbit.</div>
+    <img class="mountain" alt="Icon" src='../../images/theme/bg_il.png' />
+    <div class="name">Burak Icel</div>
+    <div class="job-desc">Full Stack Web Developer
+    </br>University of Waterloo CS 2019</div>
+    <div class="buttons">
+      <button type="button" class="btn btn-default contact">Contact</button>
+      <button type="button" class="btn btn-default resume">Resume</button>
+      <button type="button" class="btn btn-default projects">Projects</button>
+    </div>
+    <% if params[:action] == "view_page" %>
       <%= yield %>
-    </div>
-    <div class='col-sm-3 col-sm-offset-1' id='sidebar'>
-      <%= render_sidebars %>
-    </div>
+      <p style='text-align: center'><small>Powered by <a href='http://publify.co'>Publify</a> | Photo <a href='http://startupstockphotos.com/'>Startup stock photos</a>
+      </small></p>
+    <%else %>
+        <%= render 'shared/custom' %>
+    <% end %>
   </div>
 
-  <div id='page' class='container'>
-    <div class='row'>
-      <div class='span1'></div>
-      <div class='span7'></div>
-    </div>
-  </div>
-  <p style='text-align: center'><small>Powered by <a href='http://publify.co'>Publify</a> | Photo <a href='http://startupstockphotos.com/'>Startup stock photos</a></small></p> -->
+    
 
+  <script type="text/javascript">
+    var skyColor = -150;
+    var skyRateChange = 1;
+    var sunx = 0;
+    var suny = 400;
+
+    function skyTime () {
+      document.getElementById("sky").style.backgroundColor = "rgb("+Math.max(0,(skyColor+93)).toString()+","+Math.max(0,(skyColor+156)).toString()+","+Math.max(0,(skyColor+236)).toString()+")";
+
+      document.getElementById("sun").style.left = sunx.toString()+"%";
+      document.getElementById("sun").style.top = suny.toString()+"px";
+
+      if (skyColor == 19){
+        skyRateChange = -1;
+      }
+      else if (skyColor == -236) {
+        skyRateChange = 1;
+      }
+
+      if (skyColor < -200){
+        sunx =0;
+        suny = 500;
+      }
+
+      suny -= skyRateChange*1.9;
+      sunx += 0.1*(screen.width/1000);
+      skyColor += skyRateChange;
+      setTimeout(function(){skyTime()}, 50);
+    }
+    skyTime();
+
+
+    
+  </script>
 </body>
 </html>
